初步添加了UI

--- a/LibraryManagementSystem/App.xaml
+++ b/LibraryManagementSystem/App.xaml
@@ -11,6 +11,7 @@
                 </ResourceDictionary>
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/LibraryManagementSystem;component/Resources/ResourcesDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
