增加了资源字典和转换器

--- a/LibraryManagementSystem/App.xaml
+++ b/LibraryManagementSystem/App.xaml
@@ -12,6 +12,7 @@
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/LibraryManagementSystem;component/Resources/ResourcesDictionary.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/LibraryManagementSystem;component/Converters/ConvertersDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
