--- a/LibraryManagementSystem/Resources/ResourcesDictionary.xaml
+++ b/LibraryManagementSystem/Resources/ResourcesDictionary.xaml
@@ -6,6 +6,11 @@
         <Setter Property="FontFamily" Value="{StaticResource FabricIcons}"/>
         <Setter Property="FontSize" Value="14"/>
     </Style>
+    <DrawingBrush o:Freeze="True" Opacity=".1" x:Key="CloudDrawingBrush" RenderOptions.CacheInvalidationThresholdMinimum="0.5" RenderOptions.CacheInvalidationThresholdMaximum="2.0" RenderOptions.CachingHint="Cache" Viewport="0,0,314,157" ViewportUnits="Absolute" Stretch="Uniform" TileMode="Tile">
+        <DrawingBrush.Drawing>
+            <ImageDrawing o:Freeze="True" ImageSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Backgrounds/cloud.png" Rect="0,0,314,157"/>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
     <BitmapImage x:Key="LogoLarge" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Logo_large.png" RenderOptions.BitmapScalingMode="NearestNeighbor" />
     <BitmapImage x:Key="LogoMin" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Logo_min.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
     <BitmapImage x:Key="IconBook" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Icons/Book.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
