--- a/LibraryManagementSystem/Views/BooksView.xaml
+++ b/LibraryManagementSystem/Views/BooksView.xaml
@@ -9,8 +9,8 @@
                mc:Ignorable="d"
       d:DesignWidth="1000" d:DesignHeight="700">
     <hc:SimplePanel>
-        <Grid MinWidth="800" MinHeight="500" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16">
-            <Border Grid.Row="0" Grid.Column="0" Style="{StaticResource BorderRegion}" Background="{DynamicResource BorderBrush}" Effect="{StaticResource EffectShadow4}">
+        <Grid MinWidth="800" MinHeight="541" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16">
+            <Border Style="{StaticResource BorderRegion}" Background="{DynamicResource BorderBrush}" Effect="{StaticResource EffectShadow4}">
                 <Grid Background="{DynamicResource RegionBrush}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -36,7 +36,7 @@
                             </DataTemplate>
                         </DataGrid.RowHeaderTemplate>
                         <DataGrid.Columns>
-                            <DataGridTextColumn Width="150"  IsReadOnly="True" Binding="{Binding Id}" Header="识别码"/>
+                            <DataGridTextColumn Width="95"  IsReadOnly="True" Binding="{Binding Id}" Header="识别码"/>
                             <DataGridTextColumn Width="200" Binding="{Binding Title}" Header="书名"/>
                             <DataGridTextColumn Binding="{Binding Author}" Header="作者"/>
                             <DataGridTextColumn Binding="{Binding PublishingHouse}" Header="出版社"/>
