--- a/LibraryManagementSystem/Views/BorrowLogsView.xaml
+++ b/LibraryManagementSystem/Views/BorrowLogsView.xaml
@@ -1,4 +1,4 @@
-﻿<hc:TransitioningContentControl x:Class="LibraryManagementSystem.Views.ToBeReturnedView"
+﻿<hc:TransitioningContentControl x:Class="LibraryManagementSystem.Views.BorrowLogsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns:hc="https://handyorg.github.io/handycontrol"
@@ -9,36 +9,33 @@
                mc:Ignorable="d"
       d:DesignWidth="1000" d:DesignHeight="700">
     <hc:SimplePanel>
-        <Grid MinWidth="800" MinHeight="500" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16">
+        <Grid MinWidth="800" MinHeight="504" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16">
             <Border Style="{StaticResource BorderRegion}" Background="{DynamicResource BorderBrush}" Effect="{StaticResource EffectShadow4}">
                 <Grid Background="{DynamicResource RegionBrush}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                         <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
-                    <DataGrid Grid.Row="0" IsReadOnly="True" MinWidth="600" Margin="20,20,20,0" HeadersVisibility="All" 
-                              RowHeaderWidth="60" AutoGenerateColumns="False" ItemsSource="{Binding BorrowLogList}" cal:Message.Attach="[Event SelectionChanged] = [Action BorrowLogsSelectionChanged($eventArgs)]">
-                        <DataGrid.RowHeaderTemplate>
-                            <DataTemplate>
-                                <CheckBox IsChecked="{Binding IsSelected,RelativeSource={RelativeSource AncestorType=DataGridRow}}"/>
-                            </DataTemplate>
-                        </DataGrid.RowHeaderTemplate>
+                    <DataGrid Grid.Row="0" IsReadOnly="True" MinWidth="600" Margin="20,20,20,0" HeadersVisibility="All" hc:DataGridAttach.ShowRowNumber="True"
+                              RowHeaderWidth="60" AutoGenerateColumns="False" ItemsSource="{Binding BorrowLogList}" >
                         <DataGrid.Columns>
                             <DataGridTextColumn Width="95"  IsReadOnly="True" Binding="{Binding BookId}" Header="识别码"/>
                             <DataGridTextColumn Width="200" Binding="{Binding Book.Title}" Header="书名"/>
                             <DataGridTextColumn Binding="{Binding Book.Author}" Header="作者"/>
+                            <DataGridTextColumn Binding="{Binding GiveBack}" Header="归还时间"/>
                             <DataGridTextColumn Binding="{Binding Deadline}" Header="还书期限"/>
+                            <DataGridTextColumn Binding="{Binding CreditValueHistory}" Header="信誉历史"/>
                         </DataGrid.Columns>
                     </DataGrid>
                     <Grid Grid.Row="1" >
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="auto"/>
                         </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" Style="{StaticResource ButtonPrimary}" Width="120" Content="查询" IsDefault="True" Margin="0,20,0,20"
+                        <hc:Pagination Grid.Column="0" Margin="20,20,0,20" MaxPageCount="{Binding MaxPageCount}" PageIndex="{Binding PageIndex, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" IsJumpEnabled="True"
+                            cal:Message.Attach="[Event PageUpdated] = [Action PageUpdated()]"/>
+                        <Button Grid.Column="1"  Style="{StaticResource ButtonPrimary}" Width="120" Content="查询" IsDefault="True" Margin="20,20,20,20"
                                    cal:Message.Attach="[Event Click] = [Action Query]" />
-                        <Button Grid.Column="1" Style="{StaticResource ButtonPrimary}" Width="120" Content="归还" Margin="0,20,0,20"
-                                   IsEnabled="{Binding CanRevert, Mode=OneWay}" cal:Message.Attach="[Event Click] = [Action Revert]" />
                     </Grid>
                 </Grid>
             </Border>
