--- a/LibraryManagementSystem/Resources/ResourcesDictionary.xaml
+++ b/LibraryManagementSystem/Resources/ResourcesDictionary.xaml
@@ -12,7 +12,10 @@
         </DrawingBrush.Drawing>
     </DrawingBrush>
     <BitmapImage x:Key="LogoLarge" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Logo_large.png" RenderOptions.BitmapScalingMode="NearestNeighbor" />
+    <BitmapImage x:Key="LogoLong" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Logo_long.png" RenderOptions.BitmapScalingMode="NearestNeighbor" />
     <BitmapImage x:Key="LogoMin" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Logo_min.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
     <BitmapImage x:Key="IconBook" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Icons/Book.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
     <BitmapImage x:Key="IconUserInfo" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Icons/UserInfo.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+    <BitmapImage x:Key="IconGitHub" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Icons/GitHub.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
+    <BitmapImage x:Key="IconQQ" UriSource="pack://application:,,,/LibraryManagementSystem;component/Resources/Imgs/Icons/QQ.png" RenderOptions.BitmapScalingMode="NearestNeighbor"/>
 </ResourceDictionary>
